Strava AutoLiker extension
add English lang

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,16 @@
 body {
     text-align:center;
     width:200px;
+    background-color: orangered;
 }
 
-button {
-    width:100%;
-    color:white;
-    background:linear-gradient(#01a9e1, #5bc4bc);
-    border-width:0px;
-    border-radius:20px;
-    padding:5px;
-    font-weight: bold;
-    cursor:pointer;
+
+
+.langbutton {
+    display: inline-block;  }
+
+.langpic {
+    width: 40px;
+    height: 20px;
+    border: solid 1px black;
 }
